Update index.html Ajout des valeurs de l’école et mise à jour des contacts
Mise à jour du site de l'École Chrétienne Sola Gratia : ajout des valeurs et des infos de contact

Amélioration du contenu principal + coordonnées

Ajout de contenu clair pour l'identité de l'école

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <section class="contact">
         <h2>Contact</h2>
         <p><strong>Adresse :</strong> 54JW+PF Lomé</p>
-        <p><strong>Téléphone :</strong> +228 91477456</p>
+        <p><strong>Téléphone :</strong> +228 91477456 / +228 92071065</p>
+
     </section>
 
     <footer>
