--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="fondateur">
         <h2>Le fondateur</h2>
-        <p>Monsieur Dosseh, de nationalité béninoise, vit au Togo depuis de nombreuses années. Il partage cette mission avec son épouse, Mme Wowoelenou Akpénè Solange, secrétaire de l’école. Le couple élève leurs trois enfants – Bérékia, Etia, et Saadia – dans un foyer basé sur l’éducation, la foi et l’humilité.</p>
+        <p>Monsieur Dosseh, d'origine béninoise, vit au Togo depuis de nombreuses années. Il partage cette mission avec son épouse, Mme Wowoelenou Akpénè Solange, secrétaire de l’école. Le couple élève leurs trois enfants – Bérékia, Etia, et Saadia – dans un foyer basé sur l’éducation, la foi et l’humilité.</p>
     </section>
 
     <section class="valeurs">
@@ -49,9 +49,13 @@
     <section class="contact">
         <h2>Contact</h2>
         <p><strong>Adresse :</strong> 54JW+PF Lomé</p>
-        <p><strong>Téléphone :</strong> +228 91477456 / +228 90071065</p>
+        <p><strong>Téléphone :</strong> +228 90071065 / +228 91477456</p>
 
     </section>
+<section class="verset">
+  <h2>Verset de l'école</h2>
+  <p><em>« Je puis tout par celui qui me fortifie. » – Philippiens 4:13</em></p>
+</section>
 
     <footer>
         <p>Sola Gratia – Par la seule grâce de Dieu.</p>
