--- a/index.html
+++ b/index.html
@@ -61,4 +61,34 @@
         <p>Sola Gratia – Par la seule grâce de Dieu.</p>
     </footer>
 </body>
+    <section>
+  <h2>📊 Résultats des années précédentes</h2>
+  <table>
+    <tr>
+      <th>Année</th>
+      <th>Commentaires</th>
+    </tr>
+    <tr>
+      <td>2022</td>
+      <td>À compléter</td>
+    </tr>
+    <tr>
+      <td>2023</td>
+      <td>À compléter</td>
+    </tr>
+    <!-- Tu peux ajouter d'autres lignes ici -->
+  </table>
+</section>
+    <section>
+  <h2>📷 Galerie photos</h2>
+  <p>Images des élèves et infrastructures :</p>
+  <div class="galerie">
+    <!-- Exemple de photos -->
+    <img src="images/photo1.jpg" alt="Élèves">
+    <img src="images/photo2.jpg" alt="Infrastructures">
+    <img src="images/photo3.jpg" alt="Événement scolaire">
+    <!-- Tu peux en ajouter autant que tu veux -->
+  </div>
+</section>
+
 </html>
