--- a/index.html
+++ b/index.html
@@ -1,94 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>École Chrétienne Sola Gratia</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>École Chrétienne Sola Gratia</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>École Chrétienne Sola Gratia</h1>
-        <p class="devise">Volonté • Courage • Succès</p>
-    </header>
-
-    <section class="intro">
-        <h2>À propos</h2>
-        <p>Fondée le 16 septembre 2002, l’École Chrétienne Sola Gratia est un établissement privé chrétien situé à Lomé, dans le quartier Yokoè. Née d’une vision forte du fondateur, Monsieur Dosseh Kokou Beaugars – enseignant, pasteur et coordinateur du groupe Emmaüs au Togo – elle vise une éducation fondée sur la foi, l’excellence et l’intégrité.</p>
+  <main>
+    <section>
+      <h2>Bienvenue sur notre site</h2>
+      <p>L'excellence académique dans la foi chrétienne.</p>
     </section>
-
-    <section class="mission">
-        <h2>Notre mission</h2>
-        <p>L’école forme des élèves brillants et responsables, enracinés dans les valeurs chrétiennes telles que l’amour, la discipline, la vérité et la foi. Chaque journée débute par la prière et une ambiance de paix, dans un cadre propice à l’apprentissage et à la croissance spirituelle.</p>
-    </section>
-
-    <section class="sites">
-        <h2>Nos sites</h2>
-        <ul>
-            <li><strong>Site principal :</strong> Yokoè (maternelle au collège)</li>
-            <li><strong>Site secondaire :</strong> Lankouvi (près du CEG Lankouvi)</li>
-        </ul>
-    </section>
-
-    <section class="fondateur">
-        <h2>Le fondateur</h2>
-        <p>Monsieur Dosseh, d'origine béninoise, vit au Togo depuis de nombreuses années. Il partage cette mission avec son épouse, Mme Wowoelenou Akpénè Solange, secrétaire de l’école. Le couple élève leurs trois enfants – Bérékia, Etia, et Saadia – dans un foyer basé sur l’éducation, la foi et l’humilité.</p>
-    </section>
-
-    <section class="valeurs">
-        <h2>Nos valeurs</h2>
-        <ul>
-            <li>Amour</li>
-            <li>Discipline</li>
-            <li>Excellence</li>
-            <li>Vérité</li>
-            <li>Foi</li>
-        </ul>
-    </section>
-
-    <section class="contact">
-        <h2>Contact</h2>
-        <p><strong>Adresse :</strong> 54JW+PF Lomé</p>
-        <p><strong>Téléphone :</strong> +228 90071065 / +228 91477456</p>
-
-    </section>
-<section class="verset">
-  <h2>Verset de l'école</h2>
-  <p><em>« Je puis tout par celui qui me fortifie. » – Philippiens 4:13</em></p>
-</section>
-
-    <footer>
-        <p>Sola Gratia – Par la seule grâce de Dieu.</p>
-    </footer>
+  </main>
 </body>
-    <section>
-  <h2>📊 Résultats des années précédentes</h2>
-  <table>
-    <tr>
-      <th>Année</th>
-      <th>Commentaires</th>
-    </tr>
-    <tr>
-      <td>2022</td>
-      <td>À compléter</td>
-    </tr>
-    <tr>
-      <td>2023</td>
-      <td>À compléter</td>
-    </tr>
-    <!-- Tu peux ajouter d'autres lignes ici -->
-  </table>
-</section>
-    <section>
-  <h2>📷 Galerie photos</h2>
-  <p>Images des élèves et infrastructures :</p>
-  <div class="galerie">
-    <!-- Exemple de photos -->
-    <img src="images/photo1.jpg" alt="Élèves">
-    <img src="images/photo2.jpg" alt="Infrastructures">
-    <img src="images/photo3.jpg" alt="Événement scolaire">
-    <!-- Tu peux en ajouter autant que tu veux -->
-  </div>
-</section>
-
 </html>
