--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+<head><head>
+  <meta charset="UTF-8">
+  <meta name="google-site-verification" content="abc123XYZ..." />
+  <title>Mon Site</title>
+</head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>École Chrétienne Sola Gratia - Excellence & Foi</title>
